--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,5 +12,14 @@
 }
 
 .userimage {
-    max-height: 30vh;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-height: 35vh;
+}
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
