--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,11 +15,15 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
-    max-height: 40vh;
+    max-height: 26rem;
 }
 
 .center {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.badge {
+    margin-bottom: 1rem;
 }
