Users can delete their events

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,3 +27,13 @@
 .badge {
     margin-bottom: 1rem;
 }
+
+.options {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.options .btn {
+    border: none;
+}
