Added form for editing an event

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,3 +37,13 @@
 .options .btn {
     border: none;
 }
+
+.editEventForm {
+    margin-top: 1rem;
+    display: none;
+}
+
+.image-small {
+    height: 5rem;
+    width: 5rem;
+}
