--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -43,6 +43,14 @@
     display: none;
 }
 
+#newEventBtn {
+    margin: auto;
+}
+
+#newEventForm {
+    display: none;
+}
+
 .image-small {
     height: 5rem;
     width: 5rem;
