Added sidebar for searching

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,3 +55,10 @@
     height: 5rem;
     width: 5rem;
 }
+
+#sidebar {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 1.3rem;
+    height: fit-content;
+}
