--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -98,3 +98,14 @@ main {
 .navbar {
     padding-right: 0 !important;
 }
+
+.carousel-item img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    filter: brightness(40%);
+}
+
+.carousel-item {
+    height: 13rem;
+}
