Removed unnecessary code + small improvements

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -109,3 +109,11 @@ main {
 .carousel-item {
     height: 20rem;
 }
+
+.form-control {
+    background-color: #f2f5f7;
+}
+
+.white-field {
+    background-color: #f8fafc;
+}
