Started working on invitations

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -47,6 +47,11 @@ html {
     display: none;
 }
 
+.editVisibilityForm {
+    margin-top: 1rem;
+    display: none;
+}
+
 .image-small {
     height: 5rem;
     width: 5rem;
