Filters can be cleared + added private event indicator + refactor

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -122,3 +122,15 @@ main {
 .white-field {
     background-color: #f8fafc;
 }
+
+#clearFilters {
+    display: none;
+}
+
+.private {
+    font-size: large;
+    font-variant: small-caps;
+    position: absolute;
+    bottom: 0;
+    right: 1rem;
+}
