Bugfix + minor improvements

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -126,7 +126,7 @@ main {
     font-size: large;
     font-variant: small-caps;
     position: absolute;
-    bottom: 0;
+    bottom: -0.8rem;
     right: 1rem;
 }
 
