--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,6 +20,7 @@ html {
     width: 100%;
     height: 100%;
     max-height: 26rem;
+    cursor: zoom-in;
 }
 
 .center {
@@ -156,4 +157,13 @@ p.fst-italic {
 
 .closeInvitationsBtn {
     margin-right: 3rem;
+}
+
+#imageModal .modal-dialog {
+    width: fit-content;
+    max-width: 100%;
+}
+
+#clickedImage {
+    max-height: 80vh;
 }
